--- a/Angular/src/app/pages/users/superAdmin/mg-users/mg-users.component.scss
+++ b/Angular/src/app/pages/users/superAdmin/mg-users/mg-users.component.scss
@@ -94,6 +94,32 @@
           }
         }
       }
+      .filter-select{
+        display: flex;
+        // align-items: center;
+        margin-left: 10px;
+        border-bottom: 1px solid white;
+        .filterData{
+          display: flex;
+          margin-right: 10px;
+          margin-left: 10px;
+          mat-select{
+            width: 90px;
+            // font-size: 1em!important;
+            font-weight: 500;
+            color: white;
+            background-color: transparent;
+            border: none;
+            margin-left: 20px;
+            .mat-select-value{
+              color: white;
+            }
+            .mat-select-arrow{
+              color: white;
+            }
+          }
+        }
+      }
 
   }
 
