--- a/Angular/src/app/pages/account/reset-password/checkemail/checkemail.component.html
+++ b/Angular/src/app/pages/account/reset-password/checkemail/checkemail.component.html
@@ -35,7 +35,7 @@
         <button
           type="submit"
           class="btn btn-primary"
-          style="width: 100%; border-radius: 15px"
+          style="width: 100%; border-radius: 15px;display:flex;justify-content:center;align-items:center;"
           [disabled]=""
         >
           <span *ngIf="!loading">Reset password</span>
