--- a/Angular/src/app/pages/account/reset-password/reset-password.component.html
+++ b/Angular/src/app/pages/account/reset-password/reset-password.component.html
@@ -4,7 +4,7 @@
     <h1 class="big-title">Reset your Password</h1>
     <div class="message">
       <p class="text">
-        We mailed you an  <b style="color: yellow;">eigh-digit</b> code to your email Enter the code and the
+        We mailed you an  <b style="color: yellow;">eight-digit</b> code to your email Enter the code and the
         new password below to reset your password account.
       </p>
     </div>
@@ -84,7 +84,9 @@
               resetpassword.get('password')?.errors
             "
           >
-            Password is <strong>invalid</strong>
+            Password must :
+			<strong>Be at least 8 char long</strong>
+			<strong> and have at least one maj char/min char/number</strong>
           </mat-error>
         </mat-form-field>
 
@@ -118,7 +120,7 @@
         <button
           type="submit"
           class="btn btn-primary"
-          style="width: 100%; border-radius: 15px"
+          style="width: 100%; border-radius: 15px;display:flex;justify-content:center;align-items:center;"
           [disabled]=""
         >
           <span *ngIf="!loading">Reset password</span>
