--- a/Angular/src/app/pages/account/verify-email/verify-email.component.html
+++ b/Angular/src/app/pages/account/verify-email/verify-email.component.html
@@ -5,7 +5,7 @@
 	<div class="content">
 			<h1 class="big-title">Verify your email address</h1>
 			<div class="message">
-				<p class="text">We mailed you an eigh-digit code to your “email”
+				<p class="text">We mailed you an eight-digit code to your “email”
 					Enter the code and your email below to confirm your email adress.</p>
 			</div>
 			<div class="form">
