--- a/Angular/src/app/layout/navbar/navbar.component.html
+++ b/Angular/src/app/layout/navbar/navbar.component.html
@@ -87,7 +87,7 @@
 			</a>
 
 
-			<a mat-list-item class="last-item">
+			<!-- <a mat-list-item class="last-item">
 				<div class="card">
 					<div class="card-body">
 						<div *ngIf="isExpanded">
@@ -105,7 +105,7 @@
 
 					</div>
 				</div>
-			</a>
+			</a> -->
 			<a mat-list-item class="last-item" (click)="
 				isExpanded = !isExpanded;
 			">
