--- a/Angular/src/app/pages/home/home.component.scss
+++ b/Angular/src/app/pages/home/home.component.scss
@@ -85,17 +85,15 @@
 .login100-form-title {
 	display: block;
 	margin-top: 50px;
-	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+	font-family: 'Roboto', sans-serif;
 	// font-family: Poppins-Regular;
 	font-size: 30px;
 	color: #ffffff;
-	line-height: 1.2;
+	// line-height: 1.2;
 	text-align: center;
+	margin-bottom: 25px;
 }
 
-.login100-form-title i {
-	font-size: 60px;
-}
 
 .wrap-input100 {
 	width: 100%;
