--- a/Angular/src/app/layout/navbar/navbar.component.html
+++ b/Angular/src/app/layout/navbar/navbar.component.html
@@ -71,6 +71,14 @@
 					<p *ngIf="isExpanded">Claims</p>
 				</div>
 			</a>
+
+			<a mat-list-item class="my-3" [matTooltip]="isExpanded? '' :'My claims'" matTooltipPosition="right" (click)="toggleActive('/myclaims')">
+				<div matLine class="item" [ngClass]="{'active': current === '/myclaims','open':isExpanded}">
+					<mat-icon class="icon">feed</mat-icon>
+					<p *ngIf="isExpanded">My claims</p>
+				</div>
+			</a>
+
 			<a mat-list-item class="my-3" (click)="toggleActive('/profile')">
 				<div matLine class="item" [ngClass]="{'active': current === '/profile','open':isExpanded}">
 					<mat-icon class="icon">feed</mat-icon>
@@ -85,8 +93,6 @@
 					<p *ngIf="isExpanded">Wallet</p>
 				</div>
 			</a>
-
-
 			<!-- <a mat-list-item class="last-item">
 				<div class="card">
 					<div class="card-body">
