--- a/Angular/src/app/pages/claims/user/user.component.scss
+++ b/Angular/src/app/pages/claims/user/user.component.scss
@@ -15,6 +15,12 @@
 	margin: 1rem 4rem 0 1.5rem;
 }
 
+.circle{
+	width: 36px;
+	height: 36px;
+	margin-right: 10px;
+	border-radius: 50%;
+}
 
 .board-wrapper {
 	display: flex;
