--- a/Angular/src/app/pages/users/superAdmin/mg-users/mg-users.component.scss
+++ b/Angular/src/app/pages/users/superAdmin/mg-users/mg-users.component.scss
@@ -1,6 +1,7 @@
 @import '../../../../app.component.scss';
-.container{
+.Mycontainer{
   font-family: 'Montserrat';
+  margin: 15px 15px 0 25px;
   .avatar{
     margin-left: 10px;
     width: 50px;
