--- a/Angular/src/app/layout/navbar/navbar.component.html
+++ b/Angular/src/app/layout/navbar/navbar.component.html
@@ -78,7 +78,7 @@
 					<p *ngIf="isExpanded">My claims</p>
 				</div>
 			</a>
-      <a mat-list-item class="my-3" (click)="toggleActive('/manageUsers')" *ngIf="(authUser?.role[0].name =='Admin') || (authUser?.role[0].name =='Super Admin')" >
+      <a mat-list-item class="my-3" (click)="toggleActive('/manageUsers')" *ngIf="authState.isAdmin || authState.isSuperAdmin" >
 				<div matLine class="item" [ngClass]="{'active': current === '/manageUsers','open':isExpanded}">
 					<mat-icon class="icon">group</mat-icon>
 					<p *ngIf="isExpanded">Manage Users</p>
