--- a/Angular/src/app/pages/users/superAdmin/mg-users/mg-users.component.scss
+++ b/Angular/src/app/pages/users/superAdmin/mg-users/mg-users.component.scss
@@ -1,6 +1,36 @@
 @import '../../../../app.component.scss';
+.root {
+	margin: 15px 15px 0 25px;
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+	font-family: 'Roboto'!important;
+
+}
+
+.board {
+	display: flex;
+	flex-direction: column;
+	flex-grow: 1;
+	min-width: 0;
+	min-height: 0;
+}
+
+
+.board-wrapper {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	flex-grow: 1;
+	overflow-x: auto;
+	background-color: $main-component-color;
+	border-radius: 9px;
+	padding:9px;
+
+}
+
+
 .Mycontainer{
-  font-family: 'Montserrat';
   margin: 15px 15px 0 25px;
   .avatar{
     margin-left: 10px;
@@ -129,6 +159,7 @@
     margin-top: 20px;
     background-color: #273148;
     padding: 0 10px;
+	box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
 
     table{
       margin-top: 20px;
