--- a/Angular/src/app/layout/navbar/navbar.component.html
+++ b/Angular/src/app/layout/navbar/navbar.component.html
@@ -27,20 +27,20 @@
 				</div>
 			</a>
 
-			<a [matTooltip]="isExpanded? '' :'Affect claims'" matTooltipPosition="right" mat-list-item class="my-3" (click)="toggleActive('/chef')">
+			<a [matTooltip]="isExpanded? '' :'Affect claims'" matTooltipPosition="right" *ngIf="authState.isSAVManager" mat-list-item class="my-3" (click)="toggleActive('/chef')">
 				<div matLine class="item" [ngClass]="{'active': current === '/chef','open':isExpanded}">
 					<mat-icon class="icon">move_down</mat-icon>
 					<p *ngIf="isExpanded">Affect Claims</p>
 				</div>
 			</a>
-			<a [matTooltip]="isExpanded? '' : 'Claims'" matTooltipPosition="right" mat-list-item class="my-3" (click)="toggleActive('/claims')">
+			<a [matTooltip]="isExpanded? '' : 'Claims'" matTooltipPosition="right" *ngIf="authState.isSAVManager||authState.isSAVTechnician" mat-list-item class="my-3" (click)="toggleActive('/claims')">
 				<div matLine class="item" [ngClass]="{'active': current === '/claims','open':isExpanded}">
 					<mat-icon class="icon">recycling</mat-icon>
 					<p *ngIf="isExpanded">Claims</p>
 				</div>
 			</a>
 
-			<a mat-list-item class="my-3" [matTooltip]="isExpanded? '' :'My claims'" matTooltipPosition="right" (click)="toggleActive('/myclaims')">
+			<a mat-list-item class="my-3" [matTooltip]="isExpanded? '' :'My claims'" *ngIf="authState.isScooterOwner"  matTooltipPosition="right" (click)="toggleActive('/myclaims')">
 				<div matLine class="item" [ngClass]="{'active': current === '/myclaims','open':isExpanded}">
 					<mat-icon class="icon">feed</mat-icon>
 					<p *ngIf="isExpanded">My claims</p>
@@ -53,39 +53,7 @@
 				</div>
 			</a>
 
-			<a mat-list-item class="my-3" (click)="toggleActive('/profile')">
-				<div matLine class="item" [ngClass]="{'active': current === '/profile','open':isExpanded}">
-					<mat-icon class="icon">feed</mat-icon>
-					<p *ngIf="isExpanded">Invoices</p>
-				</div>
-			</a>
-
-
-			<a mat-list-item class="my-3" (click)="toggleActive('/home2')">
-				<div matLine class="item" [ngClass]="{'active': current === '/home2','open':isExpanded}">
-					<mat-icon class="icon">account_balance_wallet</mat-icon>
-					<p *ngIf="isExpanded">Wallet</p>
-				</div>
-			</a>
-			<!-- <a mat-list-item class="last-item">
-				<div class="card">
-					<div class="card-body">
-						<div *ngIf="isExpanded">
-							<h5 class="card-title">Let's start</h5>
-							<p class="card-text">Creating or adding ne Scooter couldn't be easier.</p>
-							<button type="button" class="btn btn-primary">
-								<mat-icon>add</mat-icon> Add New Scooter
-							</button>
-						</div>
-						<div *ngIf="!isExpanded">
-							<button type="button" class="btn btn-primary">
-								<mat-icon>add</mat-icon>
-							</button>
-						</div>
-
-					</div>
-				</div>
-			</a> -->
+			
 			<a mat-list-item class="last-item" (click)="
 				isExpanded = !isExpanded;
 			">
