--- a/Angular/src/app/pages/home/home.component.html
+++ b/Angular/src/app/pages/home/home.component.html
@@ -56,7 +56,7 @@
 							<div class="col-3"><img src="../../../assets/moto.png" height="150px"></div>
 							<div class="col-md-3 battery-container">
 								<h1 style="font-size:18px;margin-bottom: 0;">Battery</h1>
-								<app-battery></app-battery>
+								<app-battery [percentage]="BikeData?.BatteryCap??0"></app-battery>
 								<div class="mb-4"></div>
 							</div>
 
