[Angular] change to buttons

--- a/Angular/src/app/layout/topbar/topbar.component.scss
+++ b/Angular/src/app/layout/topbar/topbar.component.scss
@@ -19,6 +19,17 @@
         margin-top: 10px;
         align-items: baseline;
         width: 100%;
+        .butn {
+            margin: 10px;
+            border-radius: 5px;
+            color: #fff;
+            padding: 5px 10px;
+            font-size: 16px;
+            outline: none;
+            background-color: transparent;
+            border: none;
+
+        }
 
     }
 
