--- a/Angular/src/app/layout/topbar/topbar.component.html
+++ b/Angular/src/app/layout/topbar/topbar.component.html
@@ -1,9 +1,9 @@
 <div class="header">
 	<mat-icon class="search-icon">search</mat-icon>
 	<div class="cont">
-		<h3 class="item">Your vehicule</h3>
-		<h3 class="item">Location</h3>
-		<h3 class="item">Control Panel</h3>
+    <button class="butn" (click)="vehicule()">Your vehicule</button>
+    <button class="butn" (click)="Location()">Location</button>
+    <button class="butn" (click)="ControlPanel()">Control Panel</button>
 	</div>
 
 	<div class="actions">
