--- a/Angular/src/app/pages/home/chart-battery-usage/chart-battery-usage.component.html
+++ b/Angular/src/app/pages/home/chart-battery-usage/chart-battery-usage.component.html
@@ -2,4 +2,7 @@
 <!-- <div echarts [options]="options" class="demo-chart"></div> -->
 <!-- <apx-chart [series]="options.series"></apx-chart> -->
 <!-- <div echarts [options]="chartOption" class="demo-chart"></div> -->
-<div echarts [options]="options" [merge]="updateOptions" class="demo-chart" style="height:300px"></div>
+<div class="demo-chart">
+  <h2 class="card-header" style="font-size:bold ;">Battery usage</h2>
+  <div echarts [options]="options" [merge]="updateOptions" style="height:300px"></div>
+</div>
